syntax = "proto3";

package com.github.ptracker.entity;

option java_package = "com.github.ptracker.entity";
option java_multiple_files = true;
option java_outer_classname = "OtherEventProto";

import "com/github/ptracker/common/EventMetadata.proto";

message OtherEvent {

  string id = 1;

  string description = 2;

  com.github.ptracker.common.EventMetadata metadata = 3;

  string garden_plant_id = 4;
}
